--- a/static/css/admin/User.css
+++ b/static/css/admin/User.css
@@ -1,14 +1,49 @@
+/* latin-ext */
+@font-face {
+    font-family: 'Merienda';
+    font-style: normal;
+    font-weight: 400;
+    src: url("../fonts/gNMHW3x8Qoy5_mf8uWMLMIqK_Q.woff2") format('woff2');
+    unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+
+/* latin */
+@font-face {
+    font-family: 'Merienda';
+    font-style: normal;
+    font-weight: 400;
+    src: url("../fonts/gNMHW3x8Qoy5_mf8uWMFMIo.woff2") format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+body::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+    background-color: transparent;
+}
+
+/*定义滚动条高宽及背景 高宽分别对应横竖滚动条的尺寸*/
+body::-webkit-scrollbar-track {
+    background-color: #ccc;
+    border-radius: 10px;
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+/*定义滚动条轨道 内阴影+圆角*/
+body::-webkit-scrollbar-thumb {
+    background-color: #555;
+    border-radius: 10px;
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+}
+
 body {
     width: 100%;
     height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
 .SellerInfo {
     padding: 50px;
-    width: 80%;
+    width: 950px;
     height: 80%;
     border-radius: 5px;
 }
@@ -19,7 +54,7 @@ body {
     height: 50px;
     line-height: 50px;
     text-align: center;
-    background-color: white;
+    background-color: rgba(248, 248, 248, 0.96);
 }
 
 .SellerTitle {
@@ -60,7 +95,6 @@ body {
 
 .noInput {
     border: none;
-    background-color: white;
     width: 180px;
     text-align: center;
 }
