--- a/static/css/welcome.css
+++ b/static/css/welcome.css
@@ -1,11 +1,12 @@
-.main{
+.main {
     width: 100%;
     height: 80%;
     display: flex;
     align-items: center;
     justify-content: space-around;
 }
-.left{
+
+.banner {
     width: 50%;
     height: 100%;
     display: flex;
@@ -13,26 +14,23 @@
     align-items: center;
     justify-content: center;
 }
-.info{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.info_word{
-    width: 380px;
-    height: 150px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: 22px;
-    text-align: center;
-}
-.info_word p{
-    font-family: 'Merienda', cursive;
+
+.banner_img {
+    width: 200px;
 }
 
-.joinMainBtn,.logoutBtn,.joinBackendBtn,.shppingBtn{
+.info {
+    height: 255px;
+    display: flex;
+    align-items: center;
+}
+.main_banner_title{
+    margin-top: -25px;
+}
+.joinMainBtn,
+.logoutBtn,
+.joinBackendBtn,
+.shppingBtn {
     cursor: pointer;
     width: 120px;
     height: 30px;
@@ -44,14 +42,17 @@
     transition: all ease-in-out 0.5s;
 }
 
-.joinMainBtn:hover,.logoutBtn:hover,.joinBackendBtn:hover,.shppingBtn:hover{
+.joinMainBtn:hover,
+.logoutBtn:hover,
+.joinBackendBtn:hover,
+.shppingBtn:hover {
     background-color: #e4e4e4;
 }
 
-.userCenter{
+.userCenter {
     background-color: black;
 }
 
-.userCenter a{
+.userCenter a {
     color: white !important;
 }
