--- a/static/css/Detail.css
+++ b/static/css/Detail.css
@@ -69,7 +69,35 @@
 
 .shop_desc p:nth-child(1) {
     font-size: 34px;
-    color: black;
+    animation-duration: 0.3s;
+}
+
+.shop_desc p:nth-child(2) {
+    animation-duration: 0.6s;
+}
+
+.shop_desc p:nth-child(3) {
+    animation-duration: 0.9s;
+}
+
+.shop_desc p:nth-child(4) {
+    animation-duration: 1.2s;
+}
+
+.shop_desc p:nth-child(5) {
+    animation-duration: 1.5s;
+}
+
+.shop_desc p:nth-child(6) {
+    animation-duration: 1.8s;
+}
+
+.shop_desc p:nth-child(7) {
+    animation-duration: 2.1s;
+}
+
+.shop_desc p:nth-child(8) {
+    animation-duration: 2.4s;
 }
 
 .shop_count {
@@ -115,7 +143,7 @@
     border-radius: 5px;
     cursor: pointer;
     font-weight: bold;
-    transition: all ease-in-out 0.2s;
+    transition: all .5s;
 }
 
 .shop_submit button:hover {
